# mcmc

./: README.md  app.py  bayesian_ensemble.py  data.py  enhanced_preprocessing.py  main.py  pyproject.toml  requirements.txt  schema.py  synthetic_data.py  temp.py  temporal_fusion.py  traditional_boost.py  utils.py
app/forecast/: bun.lockb  package.json
app/forecast/results/: model_results.json
app/forecast/src/pages/: index.js
app/forecast/src/pages/api/: forecast.js
models/: bayesian_ensemble.py  prophet_model.py  temporal_fusion.py  traditional_boost.py
results/: metrics.txt  model_results.json  work_log_20250210_075809.txt
