[project]
name = "mcmc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy==1.24.3",
    "plotly-express>=0.4.1",
    "plotly>=6.0.0",
    "prophet>=1.1.6",
    "setuptools>=75.8.0",
    "streamlit>=1.42.0",
    "synthetic-data>=1.2.3",
    "torch>=2.6.0",
    "xgboost>=2.1.4",
]
